# LLM_Workout_Analyzer

./: .env  README.md  llm.py  modal_streamlit.py  project1.txt  pyproject.toml  streamlit_app.py  workouts.json
data/: llm_output.txt  raw_blob.txt
