[project]
name = "llm-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "supabase>=2.20.0",
]
